--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="teamtreehouse.com.iamhere.ProfileActivity">
+    tools:context="felipegonzalez.com.ciervogo.ProfileActivity">
 
 </RelativeLayout>
