--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,11 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left|bottom"
-        android:text="@string/cazar"
+        android:text="@string/login"
         android:padding="10dp"
         android:layout_marginTop="20dp"
         android:paddingRight="10dp"
-        android:onClick="getSearcher"
+        android:onClick="getLogin"
         />
 
     <Button
@@ -26,7 +26,7 @@
         android:padding="10dp"
         android:layout_marginTop="20dp"
         android:paddingRight="10dp"
-        android:onClick="getLogin"
+        android:onClick="getProfile"
         />
 
 
